--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -13,8 +13,8 @@ en:
       invalid_token: "Invalid authentication token."
       locked: "Your account is locked."
       not_found_in_database: "Invalid email or password."
-      timeout: "Your session expired, please sign in again to continue."
-      unauthenticated: "You need to sign in or sign up before continuing."
+      timeout: "Your session expired, please login again to continue."
+      unauthenticated: "You need to login or sign up before continuing."
       unconfirmed: "You have to confirm your account before continuing."
     mailer:
       confirmation_instructions:
@@ -46,7 +46,7 @@ en:
     unlocks:
       send_instructions: "You will receive an email with instructions about how to unlock your account in a few minutes."
       send_paranoid_instructions: "If your account exists, you will receive an email with instructions about how to unlock it in a few minutes."
-      unlocked: "Your account has been unlocked successfully. Please sign in to continue."
+      unlocked: "Your account has been unlocked successfully. Please login to continue."
   errors:
     messages:
       already_confirmed: "was already confirmed, please try signing in"
